tests/fixtures/valid/layout/comments_inside_wrapped_call.pine
//@version=6
indicator("Comments wrap")
x = ta.sma(
    close,
    // length comment
    20
)
plot(x)
