tests/fixtures/invalid/syntax/positional_after_named_arg.pine
//@version=6
indicator("x")
plot(title = "a", close)
